@@ -58,6 +58,7 @@
  * #1448 (Memory consumption leads to crash)
  * #1449 (P1LagrangeInterpolation sometimes fails)
  * #1456 (truncation of distribution)
+ * #1461 (ComparisonOperator().getImplementation().getClassName() segfault)
 
 == 1.14 release (2019-11-13) == #release-1.14
 
